--- a/millestone 1/index.html
+++ b/millestone 1/index.html
@@ -104,7 +104,7 @@
             <span class="right">10/01/2020 15:50:00</span>
           </div>
         </div>
-        <div class="text-sx left">
+        <div class="text-sx right">
           <div class="received">
             <i class="fas fa-chevron-down right"></i>
             <p>Tutto fatto!</p>
